<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/item_partidos"
            android:icon="@drawable/ic_field"
            android:title="@string/menu_partidos"/>
        <item android:id="@+id/item_canchas"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_canchas"/>
        <item android:id="@+id/item_equipos"
            android:icon="@drawable/ic_team"
            android:title="@string/menu_equipos"/>
        <item android:id="@+id/item_amigos"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_amigos"/>
        <item android:id="@+id/item_ayuda"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_ayuda"/>
        <item android:id="@+id/item_ajustes"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_ajustes"/>
        <item android:id="@+id/item_signout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_signout"/>
    </group>
</menu>