<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.admin.abmPredios.ViewPredioActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_nombre_predio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre del predio"
        android:textSize="24sp"
        android:gravity="start"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_phone"
            android:contentDescription="@string/phone_number" />

        <TextView
            android:id="@+id/tv_numero_telefono_predio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_de_tel_fono"
            android:textSize="16sp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_location"
            android:contentDescription="@string/ubicacion" />

        <TextView
            android:id="@+id/tv_direccion_predio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="16sp"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_ver_mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ver Mapa"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginVertical="16dp"/>

    <ListView
        android:id="@+id/lv_canchas"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginVertical="10dp"/>

    <ListView
        android:id="@+id/lv_horarios"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="12dp"/>

</LinearLayout>